# complete-device-management

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  TODOS.md  index.html  mkdocs.yml  renovate.json  sitemap.xml  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.devcontainer/certs/: .gitkeep
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/DISCUSSION_TEMPLATE/: q-and-a.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
architecture/data-flow/: index.html
architecture/iam/: index.html
architecture/pki/: index.html
cloud-infrastructure/: .env.example  README.md  docker-compose.yml
cloud-infrastructure/hawkbit/: application.properties
cloud-infrastructure/keycloak/: Dockerfile  docker-entrypoint.sh  init-tenants.sh  realm-export.json
cloud-infrastructure/nginx/: nginx.conf
cloud-infrastructure/rabbitmq/: rabbitmq.conf
cloud-infrastructure/step-ca/: Dockerfile  init-provisioners.sh  password.txt
device-stack/: .env.example  README.md  docker-compose.yml
device-stack/bootstrap/: Dockerfile  enroll.sh
device-stack/docker-based/: .env.example  docker-compose.yml
device-stack/freertos-x86_64-posix/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  FreeRTOSConfig.h  Makefile  README.md  docker-entrypoint.sh  main.c
device-stack/freertos-x86_64-posix/enroll/: enroll.c  enroll.h  mbedtls_config.h
device-stack/freertos-x86_64-posix/mqtt/: mqtt_client.c  mqtt_client.h
device-stack/mqtt-client/: Dockerfile  publish-telemetry.sh
docs/: NOTES.md  index.md  requirements.txt
docs/architecture/: iam.md  (+6 more)
getting-started/: index.html
glue-services/iot-bridge-api/: .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
glue-services/iot-bridge-api/app/: __init__.py  config.py  deps.py  main.py  models.py
glue-services/iot-bridge-api/app/clients/: __init__.py  hawkbit.py  influxdb.py  join_key_store.py  join_store.py  rabbitmq.py  step_ca.py  timescaledb.py  wireguard.py
glue-services/iot-bridge-api/app/routers/: admin_portal.py  enrollment.py  health.py  join.py  portal.py  webhooks.py
glue-services/iot-bridge-api/app/templates/portal/: admin_dashboard.html  dashboard.html  tenant_select.html
glue-services/iot-bridge-api/tests/: conftest.py  test_enrollment.py  test_webhooks.py  test_wireguard.py
installation/: index.html
provider-stack/: .env.example  .env.testing  README.md  REMARKS_KUBERNETES.md  docker-compose.yml
search/: search_index.json
tenant-stack/: .env.example  .env.testing  acme.env  docker-compose.yml
use-cases/: index.html
(+195 files in other folders)
