[project]
name = "iot-bridge-api"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE"]
ignore = [
    "B008",  # do not perform function calls in default argument (FastAPI Depends pattern)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# pydantic-settings generates dynamic fields; relax strict checks on those modules
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
